compiler/testData/diagnostics/tests/modifiers/primaryConstructorMissingBrackets.kt
class A private <!MISSING_CONSTRUCTOR_BRACKETS!>constructor<!><!SYNTAX!><!> {
}
